[package]
name = "src"
version = "0.1.1"
authors = [
  "NAIBAFFF <fab.andreasson@gmail.com>", 
  "lucubrator <nhopkins@kth.se>",
  "azraneth <azraneth@gmail.com>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Note that the version of ggez is the only one we could make compile, which is directly taken from
# their GitHub. This means that documentation is outdated.
[dependencies]
ggez = {git = "https://github.com/ggez/ggez"}